Setup application distribution
* Configure application plugin with proper name and paths
* Scaffolding Main class and command parsing