@@ -46,9 +46,7 @@ tasks.named('test') {
 }
 
 application {
-    applicationDefaultJvmArgs = ['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED']
-}
-
-run {
-    jvmArgs = ['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED']
+    applicationName = 'sweet'
+    executableDir = ''
+    mainClass = 'org.mnm.MainClazz'
 }
